Use ImmutableList and not List in BWGStructureSets
Signed-off-by: Joseph T. McQuigg <J.T.McQuigg12@gmail.com>